fix media container size on overflow content

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -37,6 +37,8 @@ body.main {
 
     #mediaContent {
         line-height: 0;
+        overflow: auto;
+        
         #media {
             width: 100%;
             height: 100%;
